[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.18.0", features = [ "rand" ] }
image = "0.25.1"
indicatif = "0.17.8"
rand = { version = "0.8.5", features = [ "small_rng" ] }
rayon = "1.10.0"

[profile.release]
debug = true
